Implemented first version of catalog listing.
git-svn-id: file:///var/svn/claro-catalog@43 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
@@ -3,7 +3,7 @@
 
   <div>
   <lift:CatalogOps.list>
-    <div><a href=""><catalog:name /></a></div>
+    <div><catalog:link/></div>
   </lift:CatalogOps.list>
   </div>     
 </lift:surround>
