Added initial code to support url rewrite for a product: /product/<id> and templates to display a product, where the snippet code doesn't know what property values are present, it simply uses the properties from the database to generate bindings.
git-svn-id: file:///var/svn/claro-catalog@47 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
@@ -1,9 +1,5 @@
 <lift:surround with="default" at="content">
   <head><title>Catalog Listing</title></head>
 
-  <div>
-  <lift:CatalogOps.list>
-    <div><catalog:link/></div>
-  </lift:CatalogOps.list>
-  </div>     
+ Content here...
 </lift:surround>
