--- a/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/default.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/default.html
@@ -63,6 +63,7 @@
           <lift:snippet type="msgs"/>
           <hr class="space" />
         </div>
+        <lift:bind name="catalogList" />
       </div>
 
       <div class="column span-17 last">
