- Added first version of shoppingcart. - Added catalog page.
git-svn-id: file:///var/svn/claro-catalog@49 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/catalog_list.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/catalog_list.html
@@ -1,8 +1,8 @@
-<lift:surround with="default" at="catalogList">
+<div>
   <h2>Catalog:</h2>
   <div>
   <lift:CatalogOps.list>
     <div><catalog:link/></div>
   </lift:CatalogOps.list>
   </div>
-</lift:surround>
+</div>
