Updated model, now shows based on Taxonomy/ProductGroups, not perfect yet. Added test data to sql template to insert when creating a new database. First basis for admin.
git-svn-id: file:///var/svn/claro-catalog@53 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/product.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/product.html
@@ -1,6 +1,7 @@
 <lift:surround with="default" at="content">
   <head><title>Product Info</title></head>
   <lift:ProductOps.show>
+   <property:articleNumber />: <product:articleNumber />
    Id: <product:id/> <br/>
    Description: <product:description/><br/>
   </lift:ProductOps.show>
