--- a/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/admin_default.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/admin_default.html
@@ -63,21 +63,18 @@
           <lift:snippet type="msgs"/>
           <hr class="space" />
         </div>
-        <lift:embed what="productgroup_list" />
-        <lift:embed what="filter_list" />
+        <lift:embed what="catalog_list" />
       </div>
 
       <div class="column span-17 last">
         <lift:bind name="content" />
       </div>
-      <div class="column span-6 colborder sidebar">
-        <lift:bind name="order_status" />
-      </div>
 
       <hr />
       <div class="column span-23 last" style="text-align: center">
         <h4 class="alt">
-          <a href="http://www.staples.com"><i>Staples</i></a> is Copyright 2009 WorldWide Conferencing, LLC</h4>
+          <a href="http://liftweb.net"><i>Lift</i></a> 
+	  is Copyright 2007-2009 WorldWide Conferencing, LLC.  Distributed under an Apache 2.0 License.</h4>
       </div>
       
     </div>
