Corrected xml syntax of products.html.
git-svn-id: file:///var/svn/claro-catalog@57 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/admin/products.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/admin/products.html
@@ -19,5 +19,5 @@
     </lift:ProductAdmin.list>
   </table>
   <div>Add product:</div>
-    <product:newName/><product:buttonAdd>
+    <product:newName/><product:buttonAdd />
 </lift:surround>
