git-svn-id: file:///var/svn/claro-catalog@60 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
@@ -1,6 +1,19 @@
 <lift:surround with="default" at="content">
   <head><title>Catalog Listing</title></head>
-  <lift:PromotionSnippet.list>
+
+  <lift:Promotions.all>
+	<h2>Promotion: <promotion:id/></h2>
+  	<p>Price: <promotion:price/></p>
+  	<p>Start Date: <promotion:start-date/></p>
+  	<promotion:product>
+  		<product:id/>
+  	</promotion:product>
+
+  </lift:Promotions.all>
+  
+  <p>OLD:</p>
+  
+    <lift:PromotionSnippet.list>
     <div class="productPromotion">
  <div class="productImage">
    <p:ProductImage />
