--- a/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
@@ -7,6 +7,7 @@
   	<p>Start Date: <promotion:start-date/></p>
   	<promotion:product>
   		<product:id/>
+  		<product:id/>
   	</promotion:product>
 
   </lift:Promotions.all>
