--- a/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/productgroup_list.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/productgroup_list.html
@@ -1,7 +1,11 @@
-<div>
-  <div>
-  <lift:ProductGroupSnippet.navList>
-    <div class="navItem"><pg:link /></div>
-  </lift:ProductGroupSnippet.navList>
-  </div>
-</div>
+<table class="ThemePanelMenu" cellspacing="0">
+  <tbody>
+    <lift:ProductGroupSnippet.navList>
+      <tr class="ThemePanelMainItem">
+        <td class="ThemePanelMainItemLeft" />
+        <td class="ThemePanelMainItemText"><pg:link /></td>
+        <td class="ThemePanelMainItemRight" />
+      </tr>
+    </lift:ProductGroupSnippet.navList>
+  </tbody>
+</table>
