git-svn-id: file:///var/svn/claro-catalog@65 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
@@ -1,7 +1,8 @@
 <lift:surround with="default" at="content">
   <head><title>Catalog Listing</title></head>
 
-  <lift:Promotions.all>
+  <lift:Catalog.list_promotions>
+  	<p>PRIJS: <promotion:price/></p>
     <lift:embed what="promotion" eager_eval="true"/> 
-  </lift:Promotions.all>
+  </lift:Catalog.list_promotions>
 </lift:surround>
