- Made some small improvements to default/index/promotion templates. - Introduced a util class for date presentation (taken from lift book example project). - Removed some dead classes.
git-svn-id: file:///var/svn/claro-catalog@66 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
@@ -1,8 +1,7 @@
 <lift:surround with="default" at="content">
   <head><title>Catalog Listing</title></head>
 
-  <lift:Catalog.list_promotions>
-  	<p>PRIJS: <promotion:price/></p>
-    <lift:embed what="promotion" eager_eval="true"/> 
+  <lift:Catalog.list_promotions eager_eval="true">
+    <lift:embed what="promotion" /> 
   </lift:Catalog.list_promotions>
 </lift:surround>
