--- a/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
@@ -2,11 +2,8 @@
   <head><title>Catalog Listing</title></head>
 
 	<h1>Direct</h1>
-  <lift:Catalog.list_promotions tag="promo">
-  	<h2>Promotion: <promo:id/></h2>
-  <lift:Catalog.list_promotions >
-  	(other promotion: <promotion:id/>.<promo:id/>)
-  </lift:Catalog.list_promotions>
+  <lift:Catalog.list_promotions>
+  	<h2>Promotion: <promotion:id/></h2>
   	
   	<p>Contains product: <promotion:product:id/></p>
   	<promotion:product>
