--- a/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/order_status.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/order_status.html
@@ -1,6 +1,8 @@
-<div class="order_status">
-  <div><a href="/shoppingcart" style="color: #FFFFFF;"><lift:loc>Shopping Cart</lift:loc></a></div>
-  <div><a href="/shoppingcart?action=complete" ><b><lift:loc>Complete Order</lift:loc>&gt;&gt;</b></a></div>
-  <div><span>0</span> <lift:loc>articles in shopping cart</lift:loc></div> 
-  <div><a href="/shoppingcart?action=clear" ><lift:loc>Empty shopping cart</lift:loc>&gt;&gt;</a></div>
-</div>
+<lift:ShoppingCart.orderStatus order_status_id="order_status">
+  <div class="order_status" id="order_status">
+    <div><a href="/shoppingcart" style="color: #FFFFFF;"><lift:loc>Shopping Cart</lift:loc></a></div>
+    <div><a href="/shoppingcart?action=complete" ><b><lift:loc>Complete Order</lift:loc>&gt;&gt;</b></a></div>
+    <div><os:total /> <lift:loc>articles in shopping cart</lift:loc></div> 
+    <div><a href="/shoppingcart?action=clear" ><lift:loc>Empty shopping cart</lift:loc>&gt;&gt;</a></div>
+  </div>
+</lift:ShoppingCart.orderStatus>    
