git-svn-id: file:///var/svn/claro-catalog@86 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/index.html
@@ -1,6 +1,6 @@
-<lift:surround with="default" at="content">
-  <head><title>Catalog Listing</title></head>
-  <lift:Catalog.list_promotions eager_eval="true">
-    <lift:embed what="promotion" /> 
-  </lift:Catalog.list_promotions>
-</lift:surround>
+<lift:Catalog.catalog eager_eval="true">
+	<lift:surround with="default" at="content">
+	  <head><title>Catalog Listing</title></head>
+	    <lift:embed what="promotion" /> 
+	</lift:surround>
+</lift:Catalog.catalog>
