--- a/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/promotion.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/promotion.html
@@ -1,4 +1,5 @@
-<div style="width:50%;float:left;padding-bottom:50px;">
+<catalog:promotions>
+  <div style="width:50%;float:left;padding-bottom:50px;">
   	<h2>Promotion: <promotion:id/></h2>
   	<promotion:product>
   		<h3>Promotion Product: <product:id/></h3>
@@ -16,4 +17,5 @@
     <p style="font-size:10px;">Promotion ends: <promotion:end_date/></p>
     <a href=""><img src="order_now.png" /></a>
     <a href="">More info &gt;&gt;</a>
-</div>
+  </div>
+</catalog:promotions>
