git-svn-id: file:///var/svn/claro-catalog@87 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/left_bar.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/left_bar.html
@@ -1,8 +1,13 @@
 <div class="page_menu" id="page_left">
   <div class="page_menu_artgrp"><lift:snippet type="msgs"/></div>
-  <div class="page_menu_artgrp">
-    <div class="description">Products</div>
-  </div>
+  <catalog:top_level_groups>
+	  <div class="page_menu_artgrp">
+	    <div class="description"><group:name/></div>
+	    <group:sub_groups tag="sub">
+	    <p>subgroup: <group:name/>.<sub:name/></p>
+	    </group:sub_groups>
+	  </div>
+  </catalog:top_level_groups>
   <div id="navigatie">
       <lift:embed what="productgroup_list" />
   </div> 
