git-svn-id: file:///var/svn/claro-catalog@89 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/left_bar.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/left_bar.html
@@ -4,7 +4,7 @@
 	  <div class="page_menu_artgrp">
 	    <div class="description"><group:name/></div>
 	    <group:sub_groups tag="sub">
-	    <p>subgroup: <group:name/>.<sub:name/></p>
+	    <p>subgroup: <sub:group_value property="Name"/> (<sub:group_value property="Description"/>)</p>
 	    </group:sub_groups>
 	  </div>
   </catalog:top_level_groups>
