git-svn-id: file:///var/svn/claro-catalog@90 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/productgroup.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/productgroup.html
@@ -1,17 +1,21 @@
-<lift:surround with="default" at="content">
-  <head><title>Product Groups</title></head>
-  <table>
-    <thead>
-      <th><lift:loc>ArticleNumber</lift:loc></th>
-      <th><lift:loc>Description</lift:loc></th>
-      <th><lift:loc>Price</lift:loc></th>
-    </thead>
-    <lift:ProductGroupSnippet.listProducts>
-      <tr>
-        <td><p:ArticleNumber /></td>
-        <td><p:ProductDescription/></td>
-        <td><p:ProductPriceNew /></td>
-      </tr>
-    </lift:ProductGroupSnippet.listProducts>
-  </table>
-</lift:surround>
+<lift:Catalog.catalog eager_eval="true">
+  <catalog:currentProductGroup>
+		<lift:surround with="default" at="content">
+		  <head><title>Product Groups</title></head>
+		  <table>
+		    <thead>
+		      <th><lift:loc>ArticleNumber</lift:loc></th>
+		      <th><lift:loc>Description</lift:loc></th>
+		      <th><lift:loc>Price</lift:loc></th>
+		    </thead>
+		    <group:products>
+		      <tr>
+		        <td><product:value property="ArticleNumber" /></td>
+		        <td><product:value property="Description"/></td>
+		        <td><product:value property="Price" /></td>
+		      </tr>
+		    </group:products>
+		  </table>
+		</lift:surround>
+  </catalog:currentProductGroup>
+</lift:Catalog.catalog>
