--- a/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/left_bar.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/left_bar.html
@@ -4,7 +4,7 @@
 	  <div class="page_menu_artgrp">
 	    <div class="description"><group:name/></div>
 	    <group:sub_groups tag="sub">
-	    <p>subgroup: <sub:group_value property="Name"/> (<sub:group_value property="Description"/>)</p>
+	    <p>subgroup: <sub:group_value property="Name"/> (<sub:group_value property="Description"/>): <sub:link>goto <sub:group_value property="Name"/></sub:link></p>
 	    </group:sub_groups>
 	  </div>
   </catalog:top_level_groups>
