git-svn-id: file:///var/svn/claro-catalog@93 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/left_bar.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/left_bar.html
@@ -5,6 +5,7 @@
 	    <div class="description"><group:name/></div>
 	    <group:sub_groups tag="sub">
 	    <p>subgroup: <sub:group_value property="Name"/> (<sub:group_value property="Description"/>): <sub:link>goto <sub:group_value property="Name"/></sub:link></p>
+	    <p><a class="ThemePanelMainItemText" sub:href="">jump to <sub:group_value property="Name"/></a></p>
 	    </group:sub_groups>
 	  </div>
   </catalog:top_level_groups>
