For shopping cart: correctly display product properties and show total number of articles in shopping basket instead of totaal unique items.
git-svn-id: file:///var/svn/claro-catalog@94 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/shoppingcart.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/shoppingcart.html
@@ -17,9 +17,9 @@
           </thead>
           <item:list>
           <tr>
-            <td><shoppingcart:articleNumber/></td>
-            <td><shoppingcart:productDescription/></td>
-            <td><shoppingcart:pricePerProduct/></td>
+            <td><product:value property="ArticleNumber"/></td>
+            <td><product:value property="ProductDescription"/></td>
+            <td><product:value property="PricePerProduct"/></td>
             <td><shoppingcart:volume/></td>
             <td><shoppingcart:priceTotal/></td>
             <td><shoppingcart:deleteButton/></td>
