Improved style/layout design of product group, promotion and product html templates.
git-svn-id: file:///var/svn/claro-catalog@95 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/admin/products.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/admin/products.html
@@ -11,7 +11,7 @@
   	  </th>
     <lift:ProductAdmin.list>
   	  <tr>
-  	    <td><product:articleNumber /></td>
+  	    <td><product:link><product:articleNumber /></product:link></td>
   	    <td><product:synopsis /></td>
   	    <td><product:price /></td>
   	    <td><product:promotion /></td>
