--- a/CatalogXS/trunk/CatalogXSPresentation/resources/group.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/group.html
@@ -2,17 +2,18 @@
   <catalog:currentProductGroup>
 		<lift:surround with="default" at="content">
 		  <head><title>Product Groups</title></head>
+		  <div class="contentheading"><group:name /></div>
 		  <table>
 		    <thead>
-		      <th><lift:loc>ArticleNumber</lift:loc></th>
-		      <th><lift:loc>Description</lift:loc></th>
-		      <th><lift:loc>Price</lift:loc></th>
+		      <th style="width:10%"><lift:loc>ArticleNumber</lift:loc></th>
+		      <th style="width:75%;text-align:center"><lift:loc>Description</lift:loc></th>
+		      <th style="width:15%"><lift:loc>Price</lift:loc></th>
 		    </thead>
 		    <group:products>
 		      <tr>
-		        <td><product:value property="ArticleNumber" /></td>
+            <td><product:link><product:value property="ArticleNumber" /></product:link></td>
 		        <td><product:value property="Description"/></td>
-		        <td><product:value property="Price" /></td>
+		        <td>&euro; <product:value property="Price" /></td>
 		      </tr>
 		    </group:products>
 		  </table>
