--- a/CatalogXS/trunk/CatalogXSPresentation/resources/product.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/product.html
@@ -1,8 +1,15 @@
-<lift:surround with="default" at="content">
-  <head><title>Product Info</title></head>
-  <lift:ProductOps.show>
-   <property:articleNumber />: <product:articleNumber />
-   Id: <product:id/> <br/>
-   Description: <product:description/><br/>
-  </lift:ProductOps.show>
-</lift:surround>
+<lift:Catalog.catalog eager_eval="true">
+  <lift:surround with="default" at="content">
+  <catalog:currentProduct>
+     <head><title>Product Info</title></head>
+     <div class="contentheading">Article Number: <product:value property="ArticleNumber"/></div>
+     <product:value property="Description"/>
+     <table cellSpacing="10" style="border-spacing:10px;">
+       <product:properties>
+         <tr><td><property:name/></td><td><property:value/></td></tr>
+       </product:properties>
+     </table>
+     <a href="" style="float:right;padding: 8px 12px;font-size: 12px;text-decoration: none;white-space:nowrap;line-height:20px;border: 1px solid #999;color: #4D4D4D;background: #FC0 url(../images/bg_d01.gif) repeat-x 0px 50%;">Add to Cart</a>
+   </catalog:currentProduct>
+  </lift:surround>
+</lift:Catalog.catalog>
