Improved layout of shopping cart.
git-svn-id: file:///var/svn/claro-catalog@96 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/shoppingcart.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/shoppingcart.html
@@ -8,12 +8,12 @@
       <show:items>
         <table>
           <thead>
-            <th>ArticleNumber</th>
-            <th>Product</th>
-            <th>Price per item</th>
-            <th>Volume</th>
-            <th>Total price</th>
-            <th>&nbsp;</th>
+            <th style="width:10%;text-align:center;">ArticleNumber</th>
+            <th style="width:50%;text-align:center;">Product</th>
+            <th style="width:10%;text-align:center;">Price per item</th>
+            <th style="width:10%;text-align:center;">Volume</th>
+            <th style="width:10%;text-align:center;">Total price</th>
+            <th style="width:10%;text-align:center;">&nbsp;</th>
           </thead>
           <item:list>
           <tr>
