--- a/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/default.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/default.html
@@ -7,7 +7,7 @@
     <title>Tetterode.nl :: Webshop</title>
     <link rel="stylesheet" type="text/css" href="/general.css" />
     <link rel="stylesheet" type="text/css" href="/menutheme.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="http://www.tetterode.nl/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/images/icon.jpg" />
     
     <script id="jquery" src="/classpath/jquery.js" type="text/javascript"/>
     <script id="json" src="/classpath/json.js" type="text/javascript"/>
