git-svn-id: file:///var/svn/claro-catalog@101 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/group.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/group.html
@@ -4,6 +4,7 @@
 		  <head><title>Group <group:group_value property="Name"/></title></head>
 		  <div class="contentheading"><group:group_value property="Name"/></div>
 		  <div class="groupimage"><group:group_value property="Image"/></div>
+		  <div class="groupdesc"><group:group_value property="Description"/></div>
 		  <group:sub_groups tag="sub">
 			  <div class="subgroup">   	    
 			  	<p><a class="subgroup" sub:href=""><sub:group_value property="Name"/></a></p>
