--- a/CatalogXS/trunk/CatalogXSPresentation/resources/search.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/search.html
@@ -1,7 +1,7 @@
 <lift:Catalog.catalog eager_eval="true">
 		<lift:surround with="default" at="content">
 		  <head><title>Product Groups</title></head>
-		  <div class="contentheading">Search Results</div>
+		  <div class="contentheading">Search Results for '<catalog:currentSearchString/>'</div>
 		  <table>
 		    <thead>
 		      <th style="width:10%"><lift:loc>ArticleNumber</lift:loc></th>
