git-svn-id: file:///var/svn/claro-catalog@102 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/default.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/templates-hidden/default.html
@@ -15,7 +15,7 @@
 <body> 
   <div id="site_content"> 
     <div class="page_header"> 
-      <div class="page_logo" onclick="javascript:document.location.href='/';"></div> 
+      <a href="/"><div class="page_logo"></div></a>  
       <div class="page_login"><a href="/admin/">Login</a> intranet</div> 
     </div>
     <table id="site_table" class="page_content">
