--- a/CatalogXS/trunk/CatalogXSPresentation/resources/shoppingcart.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/shoppingcart.html
@@ -1,3 +1,4 @@
+<lift:Catalog.catalog eager_eval="true">
 <lift:surround with="default" at="content">
  <h2>Shopping Cart</h2>
   <lift:ShoppingCart.show phase="1" shopping_list_id="shopping_list">
@@ -17,9 +18,11 @@
           </thead>
           <item:list>
           <tr>
-            <td><product:value property="ArticleNumber"/></td>
-            <td><product:value property="ProductDescription"/></td>
-            <td><product:value property="PricePerProduct"/></td>
+            <shoppingcart:product>
+              <td><product:value property="ArticleNumber"/></td>
+              <td><product:value property="Description"/></td>
+              <td><product:value property="Price"/></td>
+            </shoppingcart:product>
             <td><shoppingcart:volume/></td>
             <td><shoppingcart:priceTotal/></td>
             <td><shoppingcart:deleteButton/></td>
@@ -47,3 +50,4 @@
     Order geplaatst melding...
   </lift:ShoppingCart.show>
 </lift:surround>
+</lift:Catalog.catalog>
