--- a/CatalogXS/trunk/CatalogXSPresentation/resources/group.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/group.html
@@ -17,7 +17,7 @@
 		      <th style="width:75%;text-align:center"><lift:loc>Description</lift:loc></th>
 		      <th style="width:15%"><lift:loc>Price</lift:loc></th>
 		    </thead>
-		    <group:products>
+		    <group:products include_sub_groups="yes">
 		      <tr>
             <td><product:link><product:value property="ArticleNumber" /></product:link></td>
 		        <td><product:value property="Description"/></td>
