--- a/CatalogXS/trunk/CatalogXSPresentation/resources/product.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/product.html
@@ -9,7 +9,10 @@
          <tr><td><property:name/></td><td><property:value/></td></tr>
        </product:properties>
      </table>
-     <a href="" style="float:right;padding: 8px 12px;font-size: 12px;text-decoration: none;white-space:nowrap;line-height:20px;border: 1px solid #999;color: #4D4D4D;background: #FC0 url(../images/bg_d01.gif) repeat-x 0px 50%;">Add to Cart</a>
+      <lift:ShoppingCart.addToCart>
+        <span style="float:right;padding: 8px 12px;font-size: 12px;text-decoration: none;white-space:nowrap;line-height:20px;border: 1px solid #999;color: #4D4D4D;background: #FC0 url(../images/bg_d01.gif) repeat-x 0px 50%;">Add to Cart</span>
+      </lift:ShoppingCart.addToCart>
+   
    </catalog:currentProduct>
   </lift:surround>
 </lift:Catalog.catalog>
