--- a/CatalogXS/trunk/CatalogXSPresentation/resources/search.html
+++ b/CatalogXS/trunk/CatalogXSPresentation/resources/search.html
@@ -12,7 +12,7 @@
 		      <tr>
             <td><product:link><product:value property="ArticleNumber" /></product:link></td>
 		        <td><product:value property="Description"/></td>
-		        <td>&euro; <product:value property="Price" /></td>
+		        <td><product:value property="Price" /></td>
 		      </tr>
 		  </catalog:currentSearchProducts>
 		  </table>
